--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Keywords" content="ESPEJO, MOSAICO, ARTE, DECORADO, DISEÑOS">
+    <meta name="description" content="Contacto para tener un producto de mosaiquismo personalizado con el envio de su sugerencia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
@@ -54,7 +56,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                        <button class="btn btn-outline-success busqueda" type="submit">Buscar</button>
+                        <button class="btn btn-outline-success busqueda button" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -168,7 +170,7 @@
                         </p>
                         <p>
                             <a href="https://wa.me/543513452383" target="_blank">
-                                <img class="enlaces" src="../imagenes/iconos/Whatsapp.png" alt="" />
+                                <img class="enlaces_animacion" src="../imagenes/iconos/Whatsapp.png" alt="" />
                             </a>
                         </p>
                     </div>
