--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <iframe src="./videos/diseñando.mp4" frameborder="0"></iframe>
+          <iframe src="./videos/diseñando.jpg.mp4" frameborder="0"></iframe>
         </div>
         <div class="col">
           <h2>
