--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,33 +70,46 @@
 
     </main>
 
-    <div class="container">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <iframe class="d-block" src="../videos/Día del amigo.mp4"></iframe>             
-              </div>
-              <div class="carousel-item">
-                <iframe class="d-block " src="../videos/Día del amigo.mp4"></iframe>
-              </div>
-              <div class="carousel-item">
-                <iframe class="d-block" src="../videos/Día del amigo.mp4"></iframe>
-              </div>
-              <div class="carousel-item">
-                <iframe class="d-block" src="../videos/Día del amigo.mp4"></iframe>
-              </div>
-            </div>
-            <button class="carousel-control-prev flecha" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next flecha" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+  
 
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <div class="card cartaNosotros" style="width: 18rem;">
+                    <img src="../imagenes/nosotros/lucia.jpg.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <h4>Lucía Barrera</h4>
+                            Soy Lic. en psicopedagogía, trabajo en una escuela y un centro terapeutico.
+                            Desde chica disfrutaba mucho de hacer actividades manuales, y sentía inclinación por lo
+                            artístico,
+                            pero fui dejándolo de lado al dedicarme de lleno a mi profesión.
+                            Este emprendimiento implica para mí una oportunidad para explorar una nueva veta, conectada
+                            con la creatividad y la belleza.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+
+                <div class="card cartaNosotros" style="width: 18rem;">
+                    <img src="../imagenes/nosotros/Sole.jpg.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <h4>Soledad Barrera</h4>
+                            Lic. en Artes de la UNC, pintora e ilustradora de cuentos infantiles.
+                            Trabajo en el ámbito docente desde hace varios años, en el nivel secundario.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
+
+
+
+
 
 
 
@@ -229,8 +242,8 @@
         <!-- Copyright -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-  </script>
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
