--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords" content="ESPEJO, MOSAICO, ARTE, DECORADO, DISEÑOS">
-    <meta name="description" content="Contacto para tener un producto de mosaiquismo personalizado con el envio de su sugerencia">
+    <meta name="description"
+        content="Contacto para tener un producto de mosaiquismo personalizado con el envio de su sugerencia">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
@@ -56,7 +57,7 @@
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                        <button class="btn btn-outline-success busqueda button" type="submit">Buscar</button>
+                        <button class="btn btn-outline-success busqueda" type="submit">Buscar</button>
                     </form>
                 </div>
             </div>
@@ -69,6 +70,44 @@
         </div>
 
     </main>
+
+
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <img class ="imagen_clara"src="../imagenes/nosotros/luciSole.jpg" alt="">
+            </div>
+            <div class="col">
+                <form method="POST" action="../Logica/cambiar.php" data-aos="fade-zoom-in"
+                    data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
+                    <div>
+                        <h3 style="padding:10px;">Datos de Contacto</h3>
+                    </div>
+                    <div>
+                        <input class="form-control btnpaddding" type="text" name="usuario" placeholder="Nombre..." required></div>
+                    <div>
+                        <input class="form-control btnpaddding" type="password" name="vieja" placeholder="Apellido" required>
+                    </div>
+                    <div>
+                        <input class="form-control btnpaddding" type="email" name="nueva" placeholder="Email" required>
+                    </div>
+                    <div>
+                        <textarea class="form-control btnpaddding" name="" id="" cols="30" rows="3"></textarea>
+                    </div>
+                    <div>
+                        <button class="btn btn-success" type="submit">Enviar</button>
+                    </div>
+                </form>
+
+             
+            </div>
+        </div>
+
+    </div>
+
+
+
 
 
 
@@ -170,7 +209,7 @@
                         </p>
                         <p>
                             <a href="https://wa.me/543513452383" target="_blank">
-                                <img class="enlaces_animacion" src="../imagenes/iconos/Whatsapp.png" alt="" />
+                                <img class="enlaces" src="../imagenes/iconos/Whatsapp.png" alt="" />
                             </a>
                         </p>
                     </div>
@@ -202,8 +241,8 @@
         <!-- Copyright -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
-  </script>
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
